--- a/client/src/app/components/UI/header/header.component.html
+++ b/client/src/app/components/UI/header/header.component.html
@@ -1,23 +1,32 @@
 <div
   class="w-full text-center flex flex-row justify-content-between align-items-center"
 >
-  <img src="udhlog.png" height="60px" />
-  <div class="flex flex-row gap-4">
+  <img src="udhlog.png" height="70rem" class="m-2" />
+  <div class="flex flex-row gap-4 m-2">
+    <div class="flex flex-row gap-0 align-items-center">
+      <p-chip
+        styleClass="bg-transparent"
+        [icon]="isDarkMode ? 'pi pi-moon' : 'pi pi-sun'"
+      />
+      <p-inputSwitch
+        [ngModel]="isDarkMode"
+        (ngModelChange)="toggleLightDark()"
+        styleClass="p-button-rounded"
+      />
+    </div>
+    <header-notis />
     <p-button
-      icon="pi pi-comments"
-      label="Mensajes"
-      styleClass="p-button-rounded"
+      [icon]="selButtonStyle.icon"
+      [label]="selButtonStyle.label"
+      styleClass="p-button-rounded w-8rem"
+      [severity]="selButtonStyle.severity"
     />
     <p-button
-      icon="pi pi-bell"
-      label="Notificaciones"
+      icon="pi pi-sign-out"
+      label="Cerrar Sesión"
+      [severity]="selButtonStyle.severity"
       styleClass="p-button-rounded"
+      (click)="logout()"
     />
-    <p-button
-      icon="pi pi-graduation-cap"
-      label="Modo Estudiante"
-      styleClass="p-button-rounded"
-    />
-    <p-button icon="pi pi-user" label="Perfil" styleClass="p-button-rounded" />
   </div>
 </div>
