--- a/client/src/app/views/restore-pass/restore-pass.component.scss
+++ b/client/src/app/views/restore-pass/restore-pass.component.scss
@@ -1,4 +1,3 @@
-/* General Styles */
 .min-h-screen {
   min-height: 100vh;
 }
@@ -9,6 +8,7 @@
 
 .surface-card {
   background-color: #ffffff;
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .text-primary {
@@ -16,17 +16,19 @@
 }
 
 .text-primary:hover {
-  color: #005fa3;
-}
-
-.cursor-pointer {
+  text-decoration: underline;
   cursor: pointer;
 }
 
 .field {
-  margin-bottom: 0.8rem;
+  margin-bottom: 1rem;
 }
 
+.border-bottom {
+  border: none !important;
+  border-bottom: 2px solid #d1d1d1 !important;
+  border-radius: 0 !important;
+}
 
 .border-bottom:focus {
   border-bottom: 2px solid #007ad9 !important;
@@ -37,18 +39,6 @@
   border-radius: 5px;
 }
 
-.p-button-success {
-  background-color: #00c853 !important;
-  border-radius: 5px;
+.p-button-primary:hover {
+  background-color: #005fa3 !important;
 }
-
-.grid {
-  display: flex;
-  gap: 1rem;
-}
-
-.col-6 {
-  flex: 1 1 calc(50% - 1rem);
-}
-
-
