changes in landing page

--- a/client/src/app/views/auth/auth.component.html
+++ b/client/src/app/views/auth/auth.component.html
@@ -35,7 +35,8 @@
           <p-password
             formControlName="password"
             placeholder="Contraseña"
-            [feedback]="false"
+            [toggleMask]="true"
+            strongLabel=""
             class="border-bottom w-full"
           ></p-password>
         </div>
