Beats me, idk. Figure it out

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet />
+<div class="flex flex-column w-screen">
+  <div class="overflow-x-auto">
+    <ui-header />
+  </div>
+  <p-divider />
+  <router-outlet />
+</div>
