--- a/client/src/app/components/events/list/list.component.html
+++ b/client/src/app/components/events/list/list.component.html
@@ -1,3 +1,4 @@
+<h3 class="text-center">Próximos Eventos</h3>
 <div
   class="flex align-items-center justify-content-center flex-wrap"
   style="max-width: full; padding: 2rem"
@@ -17,12 +18,15 @@
       <div class="flex flex-column gap-2">
         <p-button
           label="Ir"
+          icon="pi pi-arrow-right"
           severity="primary"
           (click)="seeEvent(event.id!)"
           styleClass="w-full"
         ></p-button>
         <p-button
+          *ngIf="role === 'coordinator'"
           label="Eliminar"
+          icon="pi pi-trash"
           severity="danger"
           styleClass="w-full"
         ></p-button>
