Enhance event handling and notifications; update routing, add event creation interface, and improve user role management

--- a/client/src/app/components/UI/header/header.component.html
+++ b/client/src/app/components/UI/header/header.component.html
@@ -21,6 +21,7 @@
       label="Nuevo Evento"
       [severity]="selButtonStyle.severity"
       styleClass="p-button-rounded"
+      (click)="displayCreateEvent = true"
     />
     <header-notis />
     <p-button
@@ -38,3 +39,10 @@
     />}
   </div>
 </div>
+<p-dialog
+  header="Crear Evento"
+  [(visible)]="displayCreateEvent"
+  [style]="{ width: '50%' }"
+>
+  <event-create-form />
+</p-dialog>
