--- a/client/src/app/views/home/home.component.html
+++ b/client/src/app/views/home/home.component.html
@@ -1,5 +1,5 @@
 <div
-  class="flex flex-column justify-content-start align-items-center h-screen overflow-y-auto"
+  class="flex flex-column justify-content-start align-items-center h-screen w-screen overflow-y-hidden"
 >
   <router-outlet />
 </div>
