--- a/client/src/app/views/profile/profile.component.html
+++ b/client/src/app/views/profile/profile.component.html
@@ -1,1 +1,5 @@
-<p>profile works!</p>
+<div
+  class="flex flex-column justify-content-start align-items-center h-screen w-screen overflow-y-hidden"
+>
+  <p>profile works!</p>
+</div>
