--- a/client/src/dark-theme.scss
+++ b/client/src/dark-theme.scss
@@ -2,6 +2,10 @@
 $primaryColor: rgba(#2fbba0, 0.8);
 $primaryDarkColor: #2fbba0;
 
+$calendarTimePickerTimeFontSize: 0.8rem;
+$calendarCellDatePadding: .2rem;
+
+
 // Font
 $fontSize: 0.8rem;
 
