--- a/client/src/light-theme.scss
+++ b/client/src/light-theme.scss
@@ -27,6 +27,8 @@ $accordionHeaderActiveBorderColor: $primaryColor;
 $accordionHeaderActiveHoverBg: none;
 $accordionHeaderActiveHoverBorderColor: $primaryColor;
 $accordionContentBorder: none;
+$calendarTimePickerTimeFontSize: 0.8rem;
+$calendarCellDatePadding: .2rem;
 // $inputListBg: #1b1f92;
 // $inputListItemBorderRadius: 10px;
 // $inputListItemHoverBg: #015aa6;
