Add participants input to event detail component and fetch participants in event list

--- a/client/src/app/components/events/list/list.component.html
+++ b/client/src/app/components/events/list/list.component.html
@@ -74,7 +74,7 @@
   [style]="{ width: '55vw', 'overflow-x': 'hidden' }"
   [modal]="true"
 >
-  <event-detail [event]="currentEvent" />
+  <event-detail [event]="currentEvent" [participants]="participants" />
 </p-dialog>
 <p-dialog
   *ngIf="role === 'coordinator'"
