--- a/client/src/app/components/events/edit/edit.component.html
+++ b/client/src/app/components/events/edit/edit.component.html
@@ -91,7 +91,7 @@
           [options]="eventCategories"
           optionLabel="name"
           optionValue="id"
-          placeholder="Seleccione una categoría"
+          [placeholder]="event.event_type"
           styleClass="w-full"
         ></p-dropdown>
       </div>
@@ -108,6 +108,7 @@
             [showIcon]="true"
             [iconDisplay]="'input'"
             [hideOnDateTimeSelect]="false"
+            placeholder="{{placeholderDates['start'] | date : 'yyyy/MM/dd HH:mm'}}"
             hourFormat="24"
             dateFormat="yy/mm/dd"
           >
@@ -122,6 +123,7 @@
             [showIcon]="true"
             [iconDisplay]="'input'"
             [hideOnDateTimeSelect]="false"
+            placeholder="{{placeholderDates['end'] | date : 'yyyy/MM/dd HH:mm'}}"
             hourFormat="24"
             dateFormat="yy/mm/dd"
             icon="pi pi-calendar"
@@ -159,14 +161,14 @@
 
           <div
             class="flex flex-column gap-4 justify-content-start align-items-center mb-3"
-            *ngFor="let speaker of event.speakers; let i = index"
+            *ngFor="let speaker of speakers; let i = index"
           >
             <div class="flex flex-column gap-2">
               <label for="speaker_last_name">Nombre del Ponente</label>
               <input
                 id="speaker_last_name"
                 pInputText
-                [(ngModel)]="speaker.speaker.first_name"
+                [(ngModel)]="speaker.first_name"
                 type="text"
                 class="w-full"
               />
@@ -174,7 +176,7 @@
               <input
                 id="speaker_first_name"
                 pInputText
-                [(ngModel)]="speaker.speaker.last_name"
+                [(ngModel)]="speaker.last_name"
                 [ngModelOptions]="{ standalone: true }"
                 type="text"
                 class="w-full"
@@ -183,7 +185,7 @@
               <input
                 id="speaker_email"
                 pInputText
-                [(ngModel)]="speaker.speaker.email"
+                [(ngModel)]="speaker.email"
                 [ngModelOptions]="{ standalone: true }"
                 type="email"
                 class="w-48"
