--- a/client/src/app/views/auth/auth.component.html
+++ b/client/src/app/views/auth/auth.component.html
@@ -114,10 +114,10 @@
     </div>
     <!-- Image Section -->
     <div
-      class="w-full md:w-6 bg-primary-light flex align-items-center justify-content-center"
+      class="w-full md:w-16 bg-primary-light flex align-items-center justify-content-center"
     >
       <img
-        src="https://via.placeholder.com/400"
+        src="fondo_login.jpg"
         alt="Universidad"
         class="w-10 md:w-8 border-round-md"
       />
