--- a/client/src/app/views/landing/landing.component.html
+++ b/client/src/app/views/landing/landing.component.html
@@ -1,18 +1,8 @@
-<!-- Header -->
-<div class="header">
-    <img src="{{ fondo }}" alt="Logo" class="logo">
-    <p-button
-  label="Iniciar Sesión"
-  class="start-button"
-  (click)="goBackToLogin()"
-  (mouseenter)="onHoverStart()"
-  (mouseleave)="onHoverEnd()"
-></p-button>
-</div>
+
 
 <!-- Hero ()-->
 <div class="hero-section">
-    <h1>Bienvenidos a EventosUDH para Todos</h1>
+    <h1>Bienvenidos a Nexify para Todos</h1>
     <div class="rotating-text">
         <p>{{ rotatingText[currentIndex] }}</p>
     </div>
