--- a/client/src/light-theme.scss
+++ b/client/src/light-theme.scss
@@ -1,6 +1,6 @@
 $primaryColor: rgba(#2fbba0, 0.8);
 // Darken the primary color for the dark theme
-$primaryDarkColor: #2fbba0;
+$primaryDarkColor: #5499c7;
 $fontSize: 0.8rem;
 $inputSwitchSliderOnBg: #6f7070;
 $inputSwitchSliderOnHoverBg: #6f7070;
