--- a/client/src/app/components/UI/header/header.component.html
+++ b/client/src/app/components/UI/header/header.component.html
@@ -1,9 +1,9 @@
 <div
   class="w-full text-center flex flex-row justify-content-between align-items-center"
 >
-  <img src="udhlog.png" height="70rem" class="m-2" />
+  <img src="logo_nexify.png" height="70rem" class="m-2" />
   <div class="flex flex-row gap-4 m-2">
-    <div class="flex flex-row gap-0 align-items-center">
+    <!-- <div class="flex flex-row gap-0 align-items-center">
       <p-chip
         styleClass="bg-transparent"
         [icon]="isDarkMode ? 'pi pi-moon' : 'pi pi-sun'"
@@ -13,7 +13,7 @@
         (ngModelChange)="toggleLightDark()"
         styleClass="p-button-rounded"
       />
-    </div>
+    </div> -->
     @if (!isOnAuth) {
     <!-- Coordinator Buttons -->
     <p-button
@@ -21,7 +21,6 @@
       label="Gestionar Ponentes"
       icon="pi pi-users"
       [severity]="selButtonStyle.severity"
-      styleClass="p-button-rounded"
       (click)="goToSpeakers()"
     />
     <p-button
@@ -29,7 +28,6 @@
       icon="pi pi-plus"
       label="Nuevo Evento"
       [severity]="selButtonStyle.severity"
-      styleClass="p-button-rounded"
       (click)="displayCreateEvent = true"
     />
     <!-- Student Buttons -->
@@ -38,7 +36,6 @@
       label="Mis Eventos"
       icon="pi pi-calendar"
       [severity]="selButtonStyle.severity"
-      styleClass="p-button-rounded"
       (click)="goToMyEvents()"
     />
     <header-notis />
@@ -47,13 +44,11 @@
       label="Eventos"
       icon="pi pi-calendar"
       [severity]="selButtonStyle.severity"
-      styleClass="p-button-rounded"
       (click)="goToEvents()"
     />
     <p-button
       [icon]="selButtonStyle.icon"
       [label]="selButtonStyle.label"
-      styleClass="p-button-rounded w-8rem"
       [severity]="selButtonStyle.severity"
       (click)="goToProfile()"
     />
@@ -61,7 +56,6 @@
       icon="pi pi-sign-out"
       label="Cerrar Sesión"
       [severity]="selButtonStyle.severity"
-      styleClass="p-button-rounded"
       (click)="logout()"
     />}
   </div>
