--- a/client/src/app/components/events/detail/live-clock/live-clock.component.html
+++ b/client/src/app/components/events/detail/live-clock/live-clock.component.html
@@ -1,4 +1,4 @@
 <div class="text-center">
   <p>{{ targetDate | date : "dd MMM yyyy, HH:mm" }}</p>
-  <p class="text-center">{{ timeRemaining }}</p>
+  <p-tag [value]="timeRemaining" icon="pi pi-clock" [severity]="severity" />
 </div>
