--- a/client/src/app/components/events/edit/edit.component.html
+++ b/client/src/app/components/events/edit/edit.component.html
@@ -213,17 +213,19 @@
     </div>
   </div>
   <!-- Buttons -->
-  <p-button
-    label="Actualizar Evento"
-    styleClass="mt-3"
-    (click)="updateEvent()"
-    severity="warning"
-  />
-  <p-button
-    label="Eliminar Evento"
-    styleClass="mt-3"
-    (click)="updateEvent()"
-    severity="danger"
-  />
+   <div class="flex flex-row gap-4 justify-content-center align-items-center">
+    <p-button
+      label="Actualizar Evento"
+      styleClass="mt-3"
+      (click)="updateEvent()"
+      severity="warning"
+    ></p-button>
+    <p-button
+      label="Eliminar Evento"
+      styleClass="mt-3"
+      (click)="updateEvent()"
+      severity="danger"
+    ></p-button>
+  </div>
 
 </div>
