--- a/client/src/app/views/auth/auth.component.html
+++ b/client/src/app/views/auth/auth.component.html
@@ -1,9 +1,19 @@
 <div
-  class="flex justify-content-center align-items-center min-h-screen bg-dark"
+  class="flex justify-content-center align-items-center min-h-screen bg-dark -mt-8"
 >
   <div
     class="surface-card shadow-4 border-round-lg overflow-hidden w-full sm:w-10 md:w-8 lg:w-6 flex flex-column md:flex-row"
   >
+    <!-- Image Section -->
+    <div
+      class="w-full md:w-6 bg-primary-light flex align-items-center justify-content-center"
+    >
+      <img
+        src="login.jpeg"
+        alt="login"
+        class="md:w-8 border-round-md"
+      />
+    </div>
     <!-- Form Section -->
     <div class="p-4 w-full md:w-6">
       <h2 class="text-primary font-bold mb-2 text-center">
@@ -111,16 +121,6 @@
         ></p-button>
       </form>
       }
-    </div>
-    <!-- Image Section -->
-    <div
-      class="w-full md:w-6 bg-primary-light flex align-items-center justify-content-center"
-    >
-      <img
-        src="https://via.placeholder.com/400"
-        alt="Universidad"
-        class="w-10 md:w-8 border-round-md"
-      />
     </div>
   </div>
 </div>
