--- a/client/src/app/components/UI/header/header.component.html
+++ b/client/src/app/components/UI/header/header.component.html
@@ -1,19 +1,14 @@
 <div
-  class="w-full text-center flex flex-row justify-content-between align-items-center"
+  class="w-full text-center flex flex-row justify-content-between align-items-center main"
 >
-  <img src="udhlog.png" height="70rem" class="m-2" />
+  <div
+    class="flex flex-row gap-4 m-2 justify-content-center align-items-center"
+  >
+    <img src="2.png" height="70rem" />
+    <i class="pi pi-search" style="font-size: 1.5rem; color: white"></i>
+    <input pInputText class="search" type="text" placeholder="Buscar eventos" />
+  </div>
   <div class="flex flex-row gap-4 m-2">
-    <div class="flex flex-row gap-0 align-items-center">
-      <p-chip
-        styleClass="bg-transparent"
-        [icon]="isDarkMode ? 'pi pi-moon' : 'pi pi-sun'"
-      />
-      <p-inputSwitch
-        [ngModel]="isDarkMode"
-        (ngModelChange)="toggleLightDark()"
-        styleClass="p-button-rounded"
-      />
-    </div>
     @if (!isOnAuth) {
     <!-- Coordinator Buttons -->
     <p-button
@@ -21,7 +16,6 @@
       label="Gestionar Ponentes"
       icon="pi pi-users"
       [severity]="selButtonStyle.severity"
-      styleClass="p-button-rounded"
       (click)="goToSpeakers()"
     />
     <p-button
@@ -29,7 +23,6 @@
       icon="pi pi-plus"
       label="Nuevo Evento"
       [severity]="selButtonStyle.severity"
-      styleClass="p-button-rounded"
       (click)="displayCreateEvent = true"
     />
     <!-- Student Buttons -->
@@ -38,7 +31,6 @@
       label="Mis Eventos"
       icon="pi pi-calendar"
       [severity]="selButtonStyle.severity"
-      styleClass="p-button-rounded"
       (click)="goToMyEvents()"
     />
     <header-notis />
@@ -47,13 +39,12 @@
       label="Eventos"
       icon="pi pi-calendar"
       [severity]="selButtonStyle.severity"
-      styleClass="p-button-rounded"
       (click)="goToEvents()"
     />
     <p-button
       [icon]="selButtonStyle.icon"
       [label]="selButtonStyle.label"
-      styleClass="p-button-rounded w-8rem"
+      styleClass="w-8rem"
       [severity]="selButtonStyle.severity"
       (click)="goToProfile()"
     />
@@ -61,7 +52,6 @@
       icon="pi pi-sign-out"
       label="Cerrar Sesión"
       [severity]="selButtonStyle.severity"
-      styleClass="p-button-rounded"
       (click)="logout()"
     />}
   </div>
