--- a/client/src/app/components/UI/header/notifications/notifications.component.html
+++ b/client/src/app/components/UI/header/notifications/notifications.component.html
@@ -1,9 +1,8 @@
 <p-toast position="bottom-left" />
-<p-button
+<!-- <p-button
   icon="pi pi-bell"
   label="Notificaciones"
   [severity]="themesService.buttonStyle.severity"
-  styleClass="p-button-rounded"
   (click)="getSeenUnseen()"
 />
 <p-button
@@ -32,4 +31,4 @@
     />
   </div>
 </p-card>
-}
+} -->
