--- a/client/src/app/components/speakers/list/list.component.html
+++ b/client/src/app/components/speakers/list/list.component.html
@@ -1,1 +1,53 @@
-<p>list works!</p>
+<p-toast position="bottom-left"></p-toast>
+<div
+  class="flex flex-column w-screen p-4 justify-content-center align-items-center"
+>
+  <p-table
+    [value]="speakers"
+    [paginator]="true"
+    [rows]="10"
+    class="w-full"
+  >
+    <ng-template pTemplate="header">
+      <tr>
+        <th>Correo</th>
+        <th>Nombre</th>
+        <th>Apellido</th>
+        <th>Teléfono</th>
+        <th>Bio</th>
+        <th>Acciones</th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-speaker>
+      <tr>
+        <td>{{ speaker.email }}</td>
+        <td>{{ speaker.first_name }}</td>
+        <td>{{ speaker.last_name }}</td>
+        <td>{{ speaker.phone }}</td>
+        <td class="w-full">{{ speaker.bio }}</td>
+        <td>
+          <div class="flex flex-column gap-2">
+            <p-button
+              icon="pi pi-pencil"
+              severity="info"
+              label="Editar"
+              styleClass="text-blue-500"
+            />
+            <p-button
+              icon="pi pi-trash"
+              severity="info"
+              label="Eliminar"
+              styleClass="text-red-500"
+              (click)="deleteSpeaker(speaker.id)"
+            />
+          </div>
+        </td>
+      </tr>
+    </ng-template>
+  </p-table>
+  <div></div>
+</div>
+
+<p-dialog>
+  <speaker-detail />
+</p-dialog>
