--- a/client/src/app/views/profile/profile.component.html
+++ b/client/src/app/views/profile/profile.component.html
@@ -1,5 +1,81 @@
-<div
-  class="flex flex-column justify-content-start align-items-center h-screen w-screen overflow-y-hidden"
->
-  <p>profile works!</p>
+<p-toast position="bottom-left" />
+<!-- General User Setting -->
+<div class="flex flex-row gap-8 justify-content-center align-items-center main">
+  <div class="flex flex-column gap-4 w-20rem">
+    <p-card class="w-full">
+      <div class="flex flex-column w-full gap-2">
+        <p-button
+          label="Guardar Cambios"
+          icon="pi pi-save"
+          (click)="saveProfile()"
+          styleClass="w-full"
+        ></p-button>
+      </div>
+    </p-card>
+    <p-card subheader="Nombre de Usuario" class="w-full">
+      <div class="flex flex-column w-full gap-2">
+        <input
+          type="text"
+          pInputText
+          placeholder="Nombre de Usuario"
+          [value]="user.username"
+          [(ngModel)]="user.username"
+          [disabled]="true"
+        />
+      </div>
+    </p-card>
+    <p-card subheader="Correo Electrónico" class="w-full">
+      <div class="flex flex-column w-full gap-2">
+        <input
+          pInputText
+          placeholder="Correo Electrónico"
+          [value]="user.email"
+          [(ngModel)]="user.email"
+        />
+      </div>
+    </p-card>
+    <p-card
+      *ngIf="user.role === 'speaker'"
+      subheader="Enlace de LinkedIn"
+      class="w-full"
+    >
+      <div class="flex flex-column w-full gap-2">
+        <input
+          pInputText
+          placeholder="Enlace de LinkedIn"
+          [value]="user.linkedin"
+          [(ngModel)]="user.linkedin"
+        />
+      </div>
+    </p-card>
+  </div>
+  <p-card subheader="Imagen de Perfil" class="w-38rem">
+    <div
+      class="w-full flex flex-column gap-4 justify-content-center align-items-center p-2"
+    >
+      <p-fileUpload
+        #studentFU
+        mode="basic"
+        accept="image/*"
+        maxFileSize="1000000"
+        customUpload="true"
+        (uploadHandler)="uploadPfp($event, studentFU)"
+        auto="true"
+        chooseLabel="Seleccionar"
+        uploadLabel="Subir"
+        cancelLabel="Cancelar"
+        styleClass=" mt-3"
+      ></p-fileUpload>
+      <p-image
+        [src]="
+          user.profile_picture === null
+            ? 'https://via.placeholder.com/400'
+            : user.profile_picture
+        "
+        alt="Profile Picture"
+        width="400px"
+        height="400px"
+      />
+    </div>
+  </p-card>
 </div>
